--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -2,7 +2,7 @@
     "about-me": "Über mich",
     "skills": "Skills",
     "portfolio": "Portfolio",
-    "i-am": "Ich bin",
+    "i-am": "ICH BIN",
     "frontend-developer": "FRONTEND-ENTWICKLER",
     "lets-talk": "Lass uns reden!",
     "scroll-down": "Runter scrollen",
