add mail feedback translation and animation

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -74,5 +74,9 @@
         "city": "22850 Norderstedt",
         "phone": "Telefon",
         "email": "kontakt@alexanderriedel.de"
+    },
+    "banner": {
+        "success": "E-Mail erfolgreich gesendet!",
+        "error": "Fehler beim Senden der E-Mail. Bitte versuchen Sie es erneut."
     }
 }
