--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -74,5 +74,9 @@
         "city": "22850 Norderstedt",
         "phone": "Phone",
         "email": "contact@alexanderriedel.de"
+    },
+    "banner": {
+        "success": "Email successfully sent!",
+        "error": "Error sending email. Please try again."
     }
 }
