--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,7 +8,7 @@
     "scroll-down": "Scroll down",
     "hey-there": "Hey there! I'm Alexander, a frontend developer fueled by a passion for crafting user-friendly digital experiences. With a talent for problem-solving and an eye for detail, I specialize in translating complex ideas into elegant designs.",
     "lets-connect": "Let's connect and create something amazing together!",
-    "location": "Flexible in terms of working environments, I can work effectively both on-site in Munich and remotely.",
+    "location": "Flexible in terms of working environments, I can work effectively both on-site in Norderstedt and remotely.",
     "bulb": "I am open-minded and always looking for personal challenges to constantly improve my knowledge and skills.",
     "puzzle": "In my profession, programming isn't just about writing code; it's a creative form of problem-solving. I take pride in my ability to distill complex technical challenges into simple, user-friendly solutions. This way, I help you achieve your goals and bring your visions to life.",
     "looking-for": "Looking for",
